[gd_scene load_steps=10 format=3 uid="uid://b8hrh51hcej76"]

[ext_resource type="Texture2D" uid="uid://kqgum8kipd6r" path="res://Assets/sprites/slime_green.png" id="1_xwftc"]
[ext_resource type="Script" path="res://Scenes/enemy.gd" id="2_3bcf7"]
[ext_resource type="PackedScene" uid="uid://b42jfmk2bv1kr" path="res://Scenes/kill_zone.tscn" id="2_85hlc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c3oew"]
atlas = ExtResource("1_xwftc")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_46niw"]
atlas = ExtResource("1_xwftc")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7aqr"]
atlas = ExtResource("1_xwftc")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rusiy"]
atlas = ExtResource("1_xwftc")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_mh122"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46niw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7aqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rusiy")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn7h7"]
size = Vector2(13, 14)

[node name="enemy" type="AnimatedSprite2D"]
z_index = 7
sprite_frames = SubResource("SpriteFrames_mh122")
autoplay = "default"
frame = 3
frame_progress = 0.201482
script = ExtResource("2_3bcf7")

[node name="KillZone" parent="." instance=ExtResource("2_85hlc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_bn7h7")

[node name="RayCastdonwleft" type="RayCast2D" parent="."]
position = Vector2(-13, 6)
target_position = Vector2(0, 8)

[node name="RayCastdonwright" type="RayCast2D" parent="."]
position = Vector2(13, 6)
target_position = Vector2(0, 8)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(2, 6)
target_position = Vector2(13, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-1, 5)
target_position = Vector2(-13, 0)
